# finances_accounts

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start.sh
.github/workflows/: docker-image.yml
alembic/: env.py
src/finances_accounts/: account_controller.py  db.py  logger.py  main.py  models.py  params.py  routes.py  schemas.py
tests/: conftest.py  test_main.py
