[project]
name = "finances_accounts"
version = "0.1.0"
description = ""
authors = [{ name = "Mate Csornyei", email = "mcsornyei@priogen.nl" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] >=0.115.12,<0.116.0",
    "pydantic >=2.11.3,<3.0.0",
    "asyncpg >=0.30.0,<0.31.0",
    "greenlet >=3.2.0,<4.0.0",
    "finances_shared",
]

[dependency-groups]
dev = [
    "pytest >=8.3.5,<9",
    "pytest-asyncio >=0.26.0,<1",
    "ruff >=0.11.5,<0.12",
    "black >=25.1.0,<26",
    "isort >=6.0.1,<7",
    "pre-commit >=4.2.0,<5",
]

[tool.uv.sources]
finances_shared = { git = "git+https://github.com/csornyei/finances_shared.git", tag = "0.3.1" }

[tool.ruff]
target-version = "py313"
